# tape

./: .env.example  .gitignore  CONTRIBUTIONS.md  DEMO_SCRIPT.md  LICENSE  README.md  SUBMISSION.md  pyproject.toml  rubric.yaml  session-log.md
strategies/examples/: do_nothing.py  near_certainty_bond.py  yolo_buy_everything.py
tape/: __init__.py  backtester.py  cli.py  compiler.py  deployer.py  grader.py  ratelimit.py  swarm.py
tape/prompts/: compile.md  refine.md  tournament.md
tape/templates/: strategy_base.py
tests/: test_backtester.py  test_compiler.py  test_deployer.py  test_grader.py  test_ratelimit.py  test_swarm.py  test_web.py
web/: server.py
web/static/: index.html
