[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tape"
version = "0.1.0"
description = "Plain English → backtested → deployed Polymarket trading bot."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.10"
authors = [{ name = "Priyank Mishra" }]
keywords = ["polymarket", "trading", "claude", "opus", "prediction-markets"]

dependencies = [
  "anthropic>=0.39.0",       # Claude SDK (Opus 4.8)
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.0",
  "httpx>=0.27.0",
  "pyyaml>=6.0.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "web3>=7.0.0",             # On-chain reads (CTF contract)
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
]

[project.scripts]
tape = "tape.cli:main"

[tool.setuptools.packages.find]
include = ["tape*", "web*"]

[tool.ruff]
line-length = 100
target-version = "py310"
